content column maxwidth

--- a/examplePages/race1.html
+++ b/examplePages/race1.html
@@ -31,11 +31,14 @@
         menu 2
     </div>
     <div class="header">
-        <a class="but_back"><</a>
-        <p class=headertitle>test</p>
-        <a class="but_menu" id="but_menu" href="javascript:toggleMenu()">≡</a>
+        <a class="but_back ohne"><</a>
+        <a class="but_menu ohne" id="but_menu" href="javascript:toggleMenu()">≡</a>
+        <div class="title">
+            Title
+        </div>
     </div>
 </div>
+<div class="content">
 <div class="search">
     <input type="number" size="3" style="font-size:large; width:3em; display:inline;"/>
     <input type=search results=5 autosave=some_unique_value name=s style="font-size:large; width:50%;"/>
@@ -89,6 +92,7 @@
     <div class=listitem>
         racer 16
     </div>
+</div>
 </div>
 
 </body>
