responsive design and racer list template
responsive design with 1-2-3 columns, changing menu header
racer list template design

--- a/examplePages/race1.html
+++ b/examplePages/race1.html
@@ -31,8 +31,10 @@
         menu 2
     </div>
     <div class="header">
-        <a class="but_back ohne"><</a>
-        <a class="but_menu ohne" id="but_menu" href="javascript:toggleMenu()">≡</a>
+        <div class="but_back"><</div>
+        <div class="nav_button">menu 2</div>
+        <div class="nav_button">menu 3</div>
+        <div class="but_menu" id="but_menu" onclick="toggleMenu()">≡</div>
         <div class="title">
             Title
         </div>
@@ -45,16 +47,32 @@
 </div>
 <div class=list>
     <div class=listitem>
-        racer 1
+        <div class=li_head>666</div>
+        <div class=li_content>
+        <span class=li_firstline>Jerome "Strom" Thiriet</span><br>
+        <span class=li_secondline>Basel, Switzerland</span>
+        </div>
     </div>
     <div class=listitem>
-        racer 2
+        <div class=li_head>000</div>
+        <div class=li_content>
+        <span class=li_firstline>Philip Lüscher</span><br>
+        <span class=li_secondline>Colonia, Germany</span>
+        </div>
     </div>
     <div class=listitem>
-        racer 3
+        <div class=li_head>576</div>
+        <div class=li_content>
+        <span class=li_firstline>Jakob "Kobli" Boss</span><br>
+        <span class=li_secondline>Basel, Switzerland</span>
+        </div>
     </div>
     <div class=listitem>
-        racer 4
+        <div class=li_head>588</div>
+        <div class=li_content>
+        <span class=li_firstline>Dominique Candik</span><br>
+        <span class=li_secondline>Basel, Switzerland</span>
+        </div>
     </div>
     <div class=listitem>
         racer 5
@@ -94,6 +112,11 @@
     </div>
 </div>
 </div>
-
+<div class="content2">
+    Tada
+</div>
+<div class="content3">
+    Brumm
+</div>
 </body>
 </html>
