page columns horizontal animation

--- a/examplePages/race1.html
+++ b/examplePages/race1.html
@@ -113,10 +113,10 @@
 </div>
 </div>
 <div class="content2">
-    Tada
+    <div class=search>Tada</div>
 </div>
 <div class="content3">
-    Brumm
+    <div class=search>Brumm</div>
 </div>
 </body>
 </html>
