--- a/examplePages/race1.html
+++ b/examplePages/race1.html
@@ -19,6 +19,18 @@
                 document.getElementById('menu').classList.remove('menu_unfold');
             }
         }
+        
+        function drilldown($page) {
+            document.getElementById('content').classList.add('drilldown');
+            document.getElementById('content2').classList.add('drilldown');
+            document.getElementById('content2').classList.add('drilldown');
+        }
+        
+        function drillup($page) {
+            document.getElementById('content').classList.remove('drilldown');
+            document.getElementById('content2').classList.remove('drilldown');
+            document.getElementById('content2').classList.remove('drilldown');
+        }
     </script>
 </head>
 
@@ -31,8 +43,8 @@
         menu 2
     </div>
     <div class="header">
-        <div class="but_back"><</div>
-        <div class="nav_button">menu 2</div>
+        <div class="but_back" onclick="drillup()"><</div>
+        <div class="nav_button" onclick="drilldown()">menu 2</div>
         <div class="nav_button">menu 3</div>
         <div class="but_menu" id="but_menu" onclick="toggleMenu()">≡</div>
         <div class="title">
@@ -40,13 +52,14 @@
         </div>
     </div>
 </div>
-<div class="content">
+<div class="content" id="content">
+    <div class="content_menu_spacer"></div>
 <div class="search">
     <input type="number" size="3" style="font-size:large; width:3em; display:inline;"/>
     <input type=search results=5 autosave=some_unique_value name=s style="font-size:large; width:50%;"/>
 </div>
 <div class=list>
-    <div class=listitem>
+    <div class=listitem onclick="drilldown()">
         <div class=li_head>666</div>
         <div class=li_content>
         <span class=li_firstline>Jerome "Strom" Thiriet</span><br>
@@ -112,10 +125,35 @@
     </div>
 </div>
 </div>
-<div class="content2">
-    <div class=search>Tada</div>
+<div class="content2" id="content2">
+    <div class="content_menu_spacer"></div>
+    <div class=racerdetail>
+        <div class=racerpic>
+            <img src="strom.jpg">
+        </div>
+        <div class=racer_number>666</div>
+        <div class=li_content>
+        <span class=li_firstline>Jerome "Strom" Thiriet</span><br>
+        <span class=li_secondline>Basel, Switzerland</span>
+        </div>
+    </div>
+    <div class=list>
+    <div class=listitem>
+        Auftrag 1
+    </div>
+    <div class=listitem>
+        Auftrag 2
+    </div>
+    <div class=listitem>
+        Auftrag 3
+    </div>
+    <div class=listitem>
+        Auftrag 4
+    </div>
+    </div>
 </div>
-<div class="content3">
+<div class="content3" id="content3">
+    <div class="content_menu_spacer"></div>
     <div class=search>Brumm</div>
 </div>
 </body>
