ajax tests, not working
first tests with javascript getting a html page not working. possibly
due to html and not a php snippet being the response…

--- a/examplePages/race1.html
+++ b/examplePages/race1.html
@@ -129,7 +129,7 @@
     <div class="content_menu_spacer"></div>
     <div class=racerdetail>
         <div class=racerpic>
-            <img src="strom.jpg">
+            <img src="strom.jpg"/>
         </div>
         <div class=racer_number>666</div>
         <div class=li_content>
