--- a/examplePages/design DC/racer_registration.html
+++ b/examplePages/design DC/racer_registration.html
@@ -45,11 +45,13 @@
     <div class="bottom_content_wrapper">
     
       <div class="registration_values">
-        <label for="ridernumber" class="ridernumber"> <input type="tel" name="ridernumber" placeholder="Number" /> </label>
+        <label for="ridernumber" class="ridernumber"> <input type="tel" name="ridernumber" placeholder="Number"/> </label>
         <label for="ridername" class="ridername"> <input type="text" name="ridername" placeholder="Name" /> </label> 
         <label for="ridercity" class="ridercity"> <input type="text" name="ridercity" placeholder="City" /> </label>
         <label for="ridercountry" class="ridercountry"> <input type="text" name="ridercountry" placeholder="Country" /> </label>
         <label for="rideremail" class="rideremail"> <input type="text" name="rideremail" placeholder="Email" /> </label>
+        <select name="status" size="1" class="select_status"><option value="registered">registered</option>
+        <option value="active" selected="">active</option></select>
         <label for="submit" class="submit"><input type="submit" name="submit" value="Save Rider Details" /></label>
       </div>  
       </div>   
