New: ExamplePages and Icons

--- a/examplePages/designDC/main_navigation.html
+++ b/examplePages/designDC/main_navigation.html
@@ -9,6 +9,7 @@
 <meta name="viewport" content="width=device-width">
 <title>Main Menu</title>
 <link rel="stylesheet" type"text/css" href="../../core/html/design.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 
 </head>
 
