--- a/examplePages/designDC/racer_checkpointlist.html
+++ b/examplePages/designDC/racer_checkpointlist.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width">
 <title>Checkpoint</title>
 <link rel="stylesheet" type"text/css" href="../../core/html/design.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 
 <style type="text/css">
 
@@ -56,27 +57,27 @@
 
       <table>
          <tr>
-            <th class="task_number"></th>
+            <th class="task_manifest"></th>
             <th class="task_parcel"></th>
             <th class="task_confirmation"></th>
          </tr>
 
          <tr>
-            <td class="task_number">3</td>
+            <td class="task_manifest">3</td>
             <td class="task_parcel">Parcel 1</td>
-            <td class="task_confirmation drop_parcel checked"></td>
+            <td class="task_confirmation drop_parcel checked">DROP</td>
          </tr>
   
          <tr>
-            <td class="task_number">3</td>
+            <td class="task_manifest">3</td>
             <td class="task_parcel">Parcel 2</td>
-            <td class="task_confirmation pickup_parcel unchecked"></td>
+            <td class="task_confirmation pickup_parcel unchecked">PICKUP</td>
          </tr>
 
          <tr>
-            <td class="task_number">1</td>
+            <td class="task_manifest">1</td>
             <td class="task_parcel">Parcel 4</td>
-            <td class="task_confirmation drop_parcel unchecked"></td>
+            <td class="task_confirmation drop_parcel unchecked">DROP</td>
          </tr>
   
   
