--- a/examplePages/designDC/racer_registration.html
+++ b/examplePages/designDC/racer_registration.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width">
 <title>Racer Registration</title>
 <link rel="stylesheet" type"text/css" href="../../core/html/design.css">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
