New: ExamplePages and Icons

--- a/examplePages/designDC/main_navigation.html
+++ b/examplePages/designDC/main_navigation.html
@@ -80,7 +80,7 @@
        
        			<div class="middle_info">
       				<span class="rider_name">User List</span><br />
-      				<span class="rider_city_country">Messenger alone at home?</span>
+      				<span class="rider_city_country">Add Staff to man your checkpoints</span>
       			</div>
       
      				<div class="right_info">
