--- a/examplePages/designDC/racer_tasklist.html
+++ b/examplePages/designDC/racer_tasklist.html
@@ -26,8 +26,8 @@
       </div> 
        
       <div class="middle_info">
-      <span class="rider_name"">Jakob "The" Boss</span><br />
-      <span class="rider_city_country">Basel, Switzerland</span>
+      <p class="rider_name"">Jakob "The" Boss</p>
+      <p class="rider_city_country">Basel, Switzerland</p>
       </div>
       
       <div class="right_info">
