New: Added ExamplePages

--- a/examplePages/designDC/manifest_detail.html
+++ b/examplePages/designDC/manifest_detail.html
@@ -26,14 +26,14 @@
       </div> 
        
       <div class="middle_info">
-      <p class="manifest_name"">M12</p>
-	  <p class="manifest_description"">Rock'n'Roll</p>
+      <p class="manifest_name">M12</p>
+	  <p class="manifest_description">Rock'n'Roll</p>
 	 
       </div>
       
       <div class="right_info">
-      <p class="task_points">100</p>
-	   <p class="task_maxduration">00:02:10</p>
+      <p class="manifest_points">100</p>
+	   <p class="manifest_maxduration">00:02:10</p>
       </div>
 
    </div> <!-- top info wrapper -->
