--- a/examplePages/designDC/racer_checkpointlist.html
+++ b/examplePages/designDC/racer_checkpointlist.html
@@ -34,8 +34,8 @@
       </div> 
        
       <div class="middle_info">
-      <p class="rider_name"">Jakob "The" Boss</p>
-      <p class="rider_city_country">Basel, Switzerland</span>
+      <p class="title"">Jakob "The" Boss</p>
+      <p class="description">Basel, Switzerland</span>
       </div>
       
       <div class="right_info">
