--- a/examplePages/designDC/racer_manifestlist.html
+++ b/examplePages/designDC/racer_manifestlist.html
@@ -49,41 +49,44 @@
 
 <p class="racer_tasklist_heading">Tasks</p>
 
-     <table>
-  <tr>
-	 <th class="task_points"></th>
-    <th class="task_number"></th>
-    <th class="task_description"></th>
-    <th class="task_status"></th>
-  </tr>
+<table>
+	<tr>
+		<th class="task_manifest"></th>
+		<th class="manifest_points"></th>
+		<th class="manifest_description"></th>
+		<th class="manifest_status"></th>
+	
 
-  <tr>
-	 <td class="task_points">100</td>
-    <td class="task_number">3</td>
-    <td class="task_description">Short and fun</td>
-    <td class="task_status task_assigned"></td>
-  </tr>
+	</tr>
+
+	<tr>
+	 	<td class="task_manifest">1</td>
+    	<td class="manifest_points">300</td>
+    	<td class="manifest_description">Short and fun</td>
+    	<td class="manifest_status manifest_assigned"></td>
+	
+  	</tr>
   
-  <tr>
- <td class="task_points">200</td>
-    <td class="task_number">3</td>
-    <td class="task_description">Middle Distance</td>
-    <td class="task_status task_pickedup"></td>
-  </tr>
+  	<tr>
+ 		<td class="task_manifest">1</td>
+   	<td class="manifest_points">300</td>
+    	<td class="manifest_description">Short and fun</td>
+    	<td class="manifest_status manifest_pickedup"></td>
+	
+  	</tr>
   
-  <tr>
- <td class="task_points">250</td>
-    <td class="task_number">3</td>
-    <td class="task_description">Long but priceless</td>
-    <td class="task_status task_completed"></td>
-  </tr>
+  	<tr>
+		<td class="task_manifest">1</td>
+    	<td class="manifest_points">300</td>
+    	<td class="manifest_description">Short and fun</td>
+    	<td class="manifest_status manifest_completed"></td>
+  	</tr>
+</table>
   
 
-   
-  
-    </div> <!-- bottom_content_wrapper xxx --> 
+</div> <!-- bottom_content_wrapper xxx --> 
 
-    </div> <!-- bottom_info_wrapper xxx --> 
+</div> <!-- bottom_info_wrapper xxx --> 
 
 
 </div> <!-- content tab -->
