--- a/examplePages/designDC/racer_list.html
+++ b/examplePages/designDC/racer_list.html
@@ -23,7 +23,7 @@
   
     <div class="bottom_content_wrapper">
 
-<label for="submit" class="submit"><input type="submit" name="submit" value="+ Add Racer" /></label>
+<div class="new_button" onclick='<?php print(Page::getOnClickFunction( "racer", "racerEdit", null)); ?>'>+ Add Racer</div>
 
     
     <ul>
