--- a/examplePages/designDC/task_edit.html
+++ b/examplePages/designDC/task_edit.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<div class="content_tab" id="manifest_edit">
+<div class="content_tab" id="taskedit_race">
   
   <h1>Manifest Edit</h1>
 
@@ -25,8 +25,8 @@
       </div> 
        
       <div class="middle_info">
-      <p class="manifest_name">M12</p>
-	  <p class="manifest_description">Rock'n'Roll</p>
+      <p class="title">M12</p>
+	  <p class="description">Rock'n'Roll</p>
 	 
       </div>
       
