--- a/examplePages/designDC/task_detail.html
+++ b/examplePages/designDC/task_detail.html
@@ -19,7 +19,7 @@
   <h1>Task Detail</h1>
   
    
-   <div class="top_content_wrapper""> <!-- Wrapper for the top content like search, selected rider, selected parcel and so on-->
+   <div class="top_content_wrapper"> <!-- Wrapper for the top content like search, selected rider, selected parcel and so on-->
 
    <div class="top_info_wrapper"> <!-- Second top wrapper: Put in here the search input form, selected rider, selected parcel and so on.  -->
     
